@@ -5,6 +5,7 @@ zeit.find changes
 -------------------
 
 - Moved reusable styles to zeit.cms.
+- Add 'type' field to search result (for #9390).
 
 
 0.22.0 (2011-06-20)
